rename 'js' directory to 'src'

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <section id="todo-app"></section>
-    <script src="js/build/bundle.js"></script>
+    <script src="src/build/bundle.js"></script>
   </body>
 </html>
