add simple sass task

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>React-Backbone Todo App</title>
+    <link rel="stylesheet" href="build/styles.css"/>
   </head>
   <body>
     <section id="todo-app"></section>
-    <script src="src/build/bundle.js"></script>
+    <script src="build/bundle.js"></script>
   </body>
 </html>
